<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="preference_file_key">de.pieczewski.ingressTool.settings</string>
    <string name="app_name">IngressTool</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="login_button">Login</string>
    <string name="login_status_text">Login &#8230;</string>
    <string name="login_failed_msg">Login failed &#8230;\nPlease try it again</string>
    <string name="login_failed_after_user_action_msg">Intel Map is not authorized</string>
    <string name="login_success_msg">Login successfuly!</string>
    <string name="network_failed">Network is not available</string>
    <string name="ingress_login_failed">Ingress login failed</string>
    <string name="no_account_name_set">No account was set</string>
    <string name="ingress_tool_logo"></string>
    <string name="smenu_map_overlay">Map Overlay</string>
    <string name="smenu_share">Share</string>
    <string name="smenu_intel_comm">Comm</string>
    <string name="smenu_manage">Settings</string>
    <string name="smenu_logout">Logout</string>
    <string name="smenu_reload">Force Reload</string>
    <string name="smenu_tileloader">Sync</string>
    <string name="smenu_about">Info</string>
    <string name="smenu_inventory">Inventory</string>
    <string name="smenu_launch_ingress">Ingress</string>
    <string name="smenu_portal_filter">Portal Filter</string>
    <string name="login_intel_map_required">first login at http://www.ingress.com/intel</string>
    <string name="overlay_ingress">Ingress</string>
    <string name="overlay_maps">Maps</string>
    <string name="overlay_satellite">Satellite</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_portal_detail">PortalDetail</string>
    <string name="portal_info_distance">Distance: </string>
    <string name="portal_detail_image_desc">portal image</string>
    <string name="portal_detail_mod_very_rare">Very Rare</string>
    <string name="portal_detail_mod_rare">Rare</string>
    <string name="portal_detail_mod_common">Common</string>
    <string name="turn_by_car_button_description">Turn by car</string>
    <string name="portal_detail_title">portal_detail_title</string>
    <string name="portal_detail_slot">Resonator</string>
    <string name="portal_detail_nav">Navigation</string>
    <string name="title_activity_inventory">InventoryActivity</string>
    <string name="inventory_burster_title">Burster</string>
    <string name="inventory_burster_level01">Burster L1:</string>
    <string name="inventory_burster_level02">Burster L2:</string>
    <string name="inventory_burster_level03">Burster L3:</string>
    <string name="inventory_burster_level04">Burster L4:</string>
    <string name="inventory_burster_level05">Burster L5:</string>
    <string name="inventory_burster_level06">Burster L6:</string>
    <string name="inventory_burster_level07">Burster L7:</string>
    <string name="inventory_burster_level08">Burster L8:</string>
    <string name="portal_take_down_dummy">Burster L%1$d: %2$d (Inventory %3$d)</string>
    <string name="plus_deep_link_metadata_title">IngressTool</string>
    <string name="plus_deep_link_metadata_description">IngressTool:</string>
    <string name="plus_deep_link_metadata_thumbnail_url">https://developers.google.com/+/images/home_mobile.png</string>
    <string name="game_score">
<![CDATA[
        RESISTANCE: 33984712\nENLIGHTENED: 18984013
    ]]>
    </string>
    <string name="capturing_player">captured by %1$s %2$s</string>
    <string name="ingress_not_installed_title">Ingress is not installed!</string>
    <string name="ingress_not_installed">Please install ingress to use this feature</string>
    <string name="ingress_tool_info_msg">Ingress Tool Version %1$s\nCheck for update at\nhttp://ingresstool.pieczewski.de\n\n© 2013 by Christian Pieczewski</string>
    <string name="search_hint">Maps Search</string>
    <string name="app_label">Ingress Tool</string>
    <string name="player_stats">player status loading&#8230;</string>
    <string name="info_dlg_send_debug_msg">Send debug log</string>
    <string name="map_initialze">Initialize Ingress Tool&#8230;</string>
    <string name="update_available">update is available for Ingress Tool!</string>
    <string name="level0">Level 0</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level4">Level 4</string>
    <string name="level5">Level 5</string>
    <string name="level6">Level 6</string>
    <string name="level7">Level 7</string>
    <string name="level8">Level 8</string>
    <string name="fields">Fields</string>
    <string name="links">Links</string>
    <string name="portal_filter_dlg_show_all_button">Select all</string>
    <string name="cool_down">start cool down timer</string>
    <string name="cool_down_in_progress">cool down in progress</string>
    <string name="cool_down_complete">cool down complete!</string>
    <string name="cool_down_time_left">Timer: %1$s sec</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="cool_down_timer_setting_enable">CoolDownTimer enabled</string>
    <string name="title_activity_comm">CommActivity</string>
    <string name="portal_detail_section1">Portal Information</string>
    <string name="portal_detail_section2">Portal Take Down</string>
    <string name="portal_detail_section3">Portal AP</string>
    <string name="comm_section1">FULL COMM</string>
	<string name="comm_section2">CHAT COMM ALL</string>
    <string name="comm_section3">CHAT COMM FACTION</string>
    <string name="comm_section4">ACTION COMM</string>
    
    <string name="show_all_portals">Load all portals</string>
    <string name="show_L1_L8_portals">Loading L1-L8 portals</string>
    <string name="show_L2_L8_portals">Loading L2-L8 portals</string>
    <string name="show_L3_L8_portals">Loading L3-L8 portals</string>
    <string name="show_L4_L8_portals">Showing L4-L8 portals</string>
    <string name="show_L5_L8_portals">Showing L5-L8 portals</string>
    <string name="show_L6_L8_portals">Showing L6-L8 portals</string>
    <string name="show_L7_L8_portals">Showing L7-L8 portals</string>
    <string name="show_L8_portals">Showing L8 portals</string>
</resources>