<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InventoryActivity" >

    <TextView
        android:id="@+id/inv_burster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory_burster_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inv_burster_level_01_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_burster_level01" />

        <EditText
            android:id="@+id/inv_burster_level_01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inv_burster_level_02_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_burster_level02" />

        <EditText
            android:id="@+id/inv_burster_level_02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inv_burster_level_03_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_burster_level03" />

        <EditText
            android:id="@+id/inv_burster_level_03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inv_burster_level_04_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_burster_level04" />

        <EditText
            android:id="@+id/inv_burster_level_04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inv_burster_level_05_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_burster_level05" />

        <EditText
            android:id="@+id/inv_burster_level_05"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inv_burster_level_06_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_burster_level06" />

        <EditText
            android:id="@+id/inv_burster_level_06"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inv_burster_level_07_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_burster_level07" />

        <EditText
            android:id="@+id/inv_burster_level_07"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/inv_burster_level_08_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory_burster_level08" />

        <EditText
            android:id="@+id/inv_burster_level_08"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>